--- a/css-exercises/03-grouping-selectors/style.css
+++ b/css-exercises/03-grouping-selectors/style.css
@@ -8,7 +8,7 @@
     color: black;
 }
 
-.first.second {
+.first, .second {
     font-size: 28px;
     font-family: Helvetica, "Times New Roman", sans-serif;
 }
